chore: add endpoint to update user and adjust repository
